--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_script:
   - dub fetch ddox
 
 script:
-  - dub test -config=unittest --coverage
+  - dub test --config=unittest --coverage
 
 after_success:
   - dub run doveralls
